# jni_test

c/: .gitignore  CMakeLists.txt
c/include/: org_example_HelloJni.h
c/src/: org_example.HelloJni.cpp
jni/: build.gradle  settings.gradle
jni/gradle/wrapper/: gradle-wrapper.properties
jni/src/main/java/org/example/: HelloJni.java  Main.java
